# rust-csharp-ffi

./: .gitignore  Cargo.toml  Db.sln  README.md  angular.json  azure-pipelines.yml  nuget.config  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json  settings.vscode.json
ci/: common.ps1  linux-x64.ps1  osx-x64.ps1  win-x64.ps1
dotnet/: Db.sln  Dbc.targets  Native.targets  Ui.targets  nuget.config
dotnet/Db.Api/: DataModule.cs  Db.Api.csproj  Program.cs  Startup.cs  appsettings.json  rd.xml
dotnet/Db.Api/Controllers/: DataController.cs  ValuesController.cs
dotnet/Db.Storage/: Db.Storage.csproj  Deleter.cs  Key.cs  ReadResult.cs  Reader.cs  Store.cs  Writer.cs
dotnet/Db.Storage.Tests/: Db.Storage.Tests.csproj  KeyTests.cs  ReadWriteTests.cs
dotnet/Db.Tests/: Db.Tests.csproj
dotnet/Db.Tests.Integration/: Db.Tests.Integration.csproj  Program.cs
native/: Cargo.toml
native/c/: Cargo.toml
native/c/src/: handle.rs  is_null.rs  lib.rs  macros.rs  read.rs  result.rs  thread_bound.rs
native/c/src/handle/: mod.rs  thread_bound.rs
native/db/: Cargo.toml
native/db/src/: data.rs  error.rs  lib.rs
native/db/src/store/: deleter.rs  mod.rs  reader.rs  writer.rs
native/src/: data.rs  db.rs  error.rs  lib.rs  macros.rs
native/src/c/: handle.rs  is_null.rs  macros.rs  mod.rs  read.rs  result.rs  thread_bound.rs
native/src/db/: mod.rs
native/src/std_ext/: mod.rs
native/src/store/: deleter.rs  mod.rs  reader.rs  writer.rs
native/std_ext/: mod.rs  option.rs
ui/src/: index.html  main.ts  styles.sass  variables.sass
(+66 files in other folders)
