[package]
name = "dbc"
version = "0.0.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib","staticlib"]

[dependencies.db]
path = "../db"

[dependencies.libc]
version = "0.2"

[dependencies.lazy_static]
version = "1"

[dependencies.failure]
version = "0.1"

[dependencies.failure_derive]
version = "0.1"
